PR #890 の1.20.1固有補正